# ros2_kid

./: ._.  README.md  git_sync.sh
.fseventsd/: fseventsd-uuid
hurocup_interface/: ._ImageProcessInterface.html  .gitmodules  API.html  ImageProcessInterface.html  MotionControlInterface.html  NodeMonitor.html  WalkingInterface.html  aa.html  miniDRC.html  new_image.html  strategy_autoload.js
hurocup_interface/css/: InterfaceTable.css  style.css  styles.css
hurocup_interface/js/: Interface.js  InterfaceTable.js  slider.js  test.js
hurocup_interface/js/roslib/: roslib.js
src/: yolo_config.yaml
src/imageprocess/: package.xml  setup.cfg  setup.py
src/imageprocess/imageprocess/: image.py
src/motionpackage/: package.xml  setup.cfg  setup.py
src/motionpackage/motionpackage/: motionpackage.py  switch.py
src/motor_control/: package.xml  setup.py
src/motor_control/motor_control/: driver_node.py
src/old_usb_cam/: CMakeLists.txt  package.xml
src/old_usb_cam/config/: CameraSet.ini  params_1.yaml
src/old_usb_cam/include/usb_cam/: usb_cam_node.hpp
src/old_usb_cam/launch/: camera.launch.py
src/old_usb_cam/src/: usb_cam.cpp
src/strategy/: package.xml  setup.py
src/strategy/strategy/: API.py  strategy.ini  strategy.js  tesy.py
src/strategy/strategy/Parameter/: 29.ini  opencv.ini
src/strategy/strategy/ar/: ar.py
src/strategy/strategy/ar/Parameter/: 0109.ini  0305_1.ini  1226test.ini  CameraSet.ini  OBS.ini  WalkingParameter.ini  Your_File_Name.ini  aa.ini  ar.ini  hsv.ini  qq.ini  sp0319.ini  sr2026.ini  sr_stand.ini
src/strategy/strategy/bb/: bb.py
src/strategy/strategy/bb/Parameter/: BBnew.ini  BBw.ini  CameraSet.ini  ColorModelData.ini  ContinuousMove.ini  Continuous_Parameter.ini  Sector1  Sector2  Sector3  Sector87.ini  Speed.ini  Throw.ini  WalkingParameter.ini  bb_new.ini  ching.ini  halo.ini  hsv.ini  justin_test.ini  ken.ini  motionsector.ini  motionsector_new.ini  mw.ini
src/strategy/strategy/bm/: bm.py
src/strategy/strategy/bm/Parameter/: CameraSet.ini  WalkingParameter.ini  hsv.ini
src/strategy/strategy/docs/source/: Motion.rst  Other.rst  States.rst  System.rst  Topic.rst  Version.rst  VisionSensors.rst  Walking.rst  conf.py  index.rst  ros2.rst
src/strategy/strategy/lc/: calculate_edge.py  lc.py  mp.py  test.py
src/strategy/strategy/lc/Parameter/: CameraSet.ini  DownStair.ini  UpStair.ini  WalkingParameter.ini  hsv.ini  sr2026.ini  sr_stand.ini
src/strategy/strategy/mar/: dfsdfsd.txt  hahafinal.py  mar.py  mar1.py  mar2.py  nav_debug.py  navigation_node.py  newmar.py  ros2_engine_inference.py  strategy_MAR0919.py  test.py  visualization.py  viz_optimized.py
src/strategy/strategy/mar/Parameter/: CameraSet.ini  ColorModelData.ini  Continuous_Parameter.ini  WalkingParameter.ini  hsv.ini  mar.ini
src/strategy/strategy/obs/: CMakeLists.txt  ddd.py  obs.py
src/strategy/strategy/obs/Parameter/: 0305.ini  0305_1.ini  CameraSet.ini  ColorModelData.ini  Continuous_Back22.ini  Continuous_Parameter.ini  Continuous_Second_Parameter.ini  Continuous_Third_Parameter.ini  GuoWeiACT.ini  Naruto.ini  OBS.ini  Single_Parameter.ini  WalkingGait.ini  WalkingParameter.ini  bachang.ini  crawl.ini  crawlB.ini  crawlnew.ini  crawlwhite.ini  crw_0411_1.ini  crw_0415_2.ini  crw_1118_b.ini  crw_new.ini  firstmove.ini  hand.ini  handup.ini  hsv.ini  naruto.ini  naruto2.ini  preturn.ini  reddoor.ini  redoor3.ini
src/strategy/strategy/obs/Parameter/sector/: 1.ini  11.ini  1111.ini  12.ini  120.ini  123.ini  13.ini  14.ini  15.ini  200.ini  201.ini  202.ini  203.ini  21.ini  22.ini  220.ini  23.ini  234.ini  24.ini  25.ini  26.ini  27.ini  28.ini  30.ini  31.ini  32.ini  33.ini  333.ini  34.ini  35.ini  36.ini  37.ini  38.ini  40.ini  444.ini  4444.ini  456.ini  50.ini  51.ini  52.ini  (+36 more)
src/strategy/strategy/sp/: sp.py
src/strategy/strategy/sp/Parameter/: 0109.ini  CameraSet.ini  WalkingParameter.ini  Your_File_Name.ini  hsv.ini  sp0319.ini  sr_stand.ini
src/strategy/strategy/sr/: sr(0422).py  sr.py
src/strategy/strategy/sr/Parameter/: 0117lc.ini  0126wc.ini  0305lc.ini  0603bc.ini  CameraSet.ini  ColorModelData.ini  Continuous_Back.ini  LCdown_Parameter.ini  LCstep_Parameter.ini  Ladder_you.ini  Single_Parameter.ini  WalkingParameter.ini  bcbc.ini  cwtest.ini  door.ini  hsv.ini  naruto2.ini  opencv.ini  redoor3.ini  sr.ini  srregina.ini  wall.ini  wc.ini  wcwc.ini
src/strategy/strategy/us/Parameter/: CameraSet.ini  WalkingParameter.ini  yuv.ini
src/strategy/strategy/wl/: wl.py
src/strategy/strategy/wl/Parameter/: .ini  10Diskken.ini  10disk.ini  10disktest.ini  20disktest.ini  30disktest.ini  40disktest.ini  40disktest_cnv.ini  50disktest.ini  60disktest.ini  70disktest.ini  80disktest.ini  CameraSet.ini  ColorModelData.ini  Continuous_Back.ini  Continuous_Parameter.ini  Continuous_Second_Back.ini  NewFile.ini  WL_40.ini  (+14 more)
src/tku_msgs/: CMakeLists.txt  package.xml
src/tku_msgs/msg/: Camera.msg  CameraSave.msg  ColorData.msg  Dio.msg  DrawImage.msg  HSVValue.msg  InterfaceSend2Sector.msg  LCParameter.msg  LabelModelObjectList.msg  PIDpackage.msg  Parameter.msg  Parametermessage.msg  SaveMotion.msg  SaveMotionVector.msg  SensorPackage.msg  SingleMotorData.msg  YUVValue.msg  Zoom.msg
src/tku_msgs/srv/: BuildModel.srv  CameraInfo.srv  CheckSector.srv  HSVInfo.srv  LCWalkingGaitParameter.srv  OpenCvInfo.srv  ReadMotion.srv  SaveYUV.srv  SendHandSpeed.srv  WalkingGaitParameter.srv  YUVInfo.srv
src/usb_cam/: package.xml  setup.cfg  setup.py
src/usb_cam/config/: params_2.yaml
src/usb_cam/include/usb_cam/: usb_cam.hpp  usb_cam_node.hpp
src/usb_cam/launch/: camera.launch.py  camera_config.py  camera_only.launch.py
src/usb_cam/src/: usb_cam_node.cpp
src/usb_cam/usb_cam/: camera_info_loader.py  camera_io.py  settings_io.py  show_image.py  usb_cam_node.py
src/walking/: package.xml  setup.cfg  setup.py  setup.py.save
src/walking/launch/: walking.launch.py
src/walking/walking/: Dynamixel_setup.py  Inverse_kinematic.py  Parameter.py  Walkinggait.py  imu.py  imu_node.py  walking_node.py  walking_web_bridge.py
(+274 files in other folders)
