<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_cam</name>
  <version>0.1.0</version>
  <description>Pure-Python USB camera driver (ROS2).</description>

  <maintainer email="5454sky@gmail.com">iclab</maintainer>
  <license>BSD</license>

  <!-- 純 Python 套件，使用 ament_python 而非 ament_cmake -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 執行時所需的 ROS2 / Python 套件 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tku_msgs</exec_depend>

  <!-- 執行時的外部 Python 模組 -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- v4l2-ctl：透過 subprocess 設定相機控制項（亮度、白平衡等） -->
  <exec_depend>v4l-utils</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
